--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <script type="text/javascript" src="p5.js"></script>
+  <script src="p5.sound.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
   <!---->
-  <!-- script src="p5.sound.js"></script -->
   <script type="text/javascript" src="sketch.js"></script>
   <script type="text/javascript" src="vehicle.js"></script>
   <!-- this line removes any default padding and style. you might only need one
